# pytest-playwright-example

./: README.md  pyproject.toml
.github/workflows/: push.yml
tests/: __init__.py  test_ls_pages.py
